--- a/tests/Makefile.sub
+++ b/tests/Makefile.sub
@@ -30,8 +30,8 @@ installcheck-local: tests-installcheck
 
 # == suite1 ==
 NOINST_TESTS         += tests/suite1
-tests_suite1_CXXFLAGS = $(AM_CXXFLAGS) $(SFI_CFLAGS)
-tests_suite1_LDADD    = sfi/libsfi-@MAJOR@.la $(BSE_LIBS)
+tests_suite1_CXXFLAGS = $(AM_CXXFLAGS) $(BSE_CFLAGS)
+tests_suite1_LDADD    = bse/libbse-@MAJOR@.la $(BSE_LIBS)
 tests_suite1_SOURCES = \
 	tests/suite1-main.cc \
 	tests/suite1-randomhash.cc
