--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -56,3 +56,19 @@ TAPTESTS          += firhandle
 firhandle_CXXFLAGS = $(AM_CXXFLAGS) $(BSE_CFLAGS)
 firhandle_LDADD    = ../libbse-@MAJOR@.la $(SFI_LIBS)
 firhandle_SOURCES  = firhandle.cc
+
+# == t279-assertions-test ==
+t279-assertions-test: integrity
+	@echo "  RUN…    " $@
+	$(Q) ./integrity --return_unless1 || $(QDIE) --return_unless1 failed
+	$(Q) ./integrity --assert_return1 || $(QDIE) --assert_return1 failed
+	$(Q) (trap ':' SIGTRAP && ./integrity --return_unless0) $(QSTDERR) ; test "$$?" -eq 7 || $(QDIE) --return_unless0 failed
+	$(Q) (trap ':' SIGTRAP && ./integrity --assert_return0) $(QSTDERR) ; test "$$?" != 0 || $(QDIE) --assert_return0 failed
+	$(Q) (trap ':' SIGTRAP && ./integrity --assert_return_unreached) $(QSTDERR) ; test "$$?" != 0 || $(QDIE) --assert_return_unreached failed
+	$(Q) (trap ':' SIGTRAP && ./integrity --fatal_error) $(QSTDERR) ; test "$$?" != 0 || $(QDIE) --fatal_error failed
+	$(Q) ./integrity --backtrace          2>t279-assertions-test.tmp && \
+		grep -qi 'Backtrace'		t279-assertions-test.tmp && \
+		grep -qi 'in.*my_compare_func'	t279-assertions-test.tmp || $(QDIE) --backtrace failed
+	$(Q) rm -f t279-assertions-test.tmp
+	@echo "  PASS    " $@
+check-local: t279-assertions-test
