BSE: internal.hh: move and rename sfi/private.hh to bse/internal.hh
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -27,6 +27,7 @@ bse_public_headers = $(strip \
 	entropy.hh			\
 	formatter.hh			\
 	gbsearcharray.hh		\
+	internal.hh			\
 	path.hh				\
 	platform.hh			\
 	randomhash.hh			\
