--- a/Effects/Makefile.sub
+++ b/Effects/Makefile.sub
@@ -1,12 +1,12 @@
 # This Source Code Form is licensed MPL-2.0: http://mozilla.org/MPL/2.0
 
-Effects-install:   install-Effects_installDATA
-Effects-uninstall: uninstall-Effects_installDATA
+Effects-install:     install-Effects_effectDATA
+Effects-uninstall: uninstall-Effects_effectDATA
 
-Effects_install_DATA = $(strip			\
+Effects_effect_DATA = $(strip			\
 	Effects/atan-canyon.bse			\
 	Effects/bqs-compressor.bse		\
 	Effects/bqs-reverb.bse			\
 	Effects/bqs-saturation-and-reverb.bse	\
 )
-Effects_installdir = $(beastdatadir)/Effects
+Effects_effectdir = $(pkginstalldir)/Effects
