--- a/data/bse.pc.in
+++ b/data/bse.pc.in
@@ -1,16 +1,17 @@
-destdir=
-beastdestdir=
-prefix=${destdir}@prefix@
+prefix=@prefix@
 exec_prefix=@exec_prefix@
-beastdir=${beastdestdir}@beastdir@
-beastdatadir=@beastdatadir@
-bselibdir=@bselibdir@
-bseincludedir=@bseincludedir@
+pkginstalldir=@pkginstalldir@
+# sharedlibdir=@sharedlibdir@
+libdir=@libdir@
+includedir=@pkginstalldir@/include
 
-demodir=@beastdatadir@/demo
-sampledir=@beastdatadir@/samples
-effectdir=@beastdatadir@/effects
-instrumentdir=@beastdatadir@/instruments
+bselibdir=@bselibdir@
+
+demodir=@pkginstalldir@/Demos
+effectdir=@pkginstalldir@/Effects
+instrumentdir=@pkginstalldir@/Instruments
+sampledir=@pkginstalldir@/Samples
+
 scriptdir=@beastdatadir@/scripts
 plugindir=${bselibdir}/plugins
 driverdir=${bselibdir}/drivers
@@ -20,4 +21,4 @@ Description: Beast - Music Synthesizer and Composer
 Requires: @BSE_PC_REQUIRE@ gobject-2.0 gmodule-2.0
 Version: @PACKAGE_VERSION@
 Libs: -L${bselibdir} -lbse-@MAJOR@ @BSE_PC_LIBS@
-Cflags: -I${bseincludedir} @BSE_PC_CFLAGS@
+Cflags: -I${includedir} @BSE_PC_CFLAGS@
