--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -361,7 +361,7 @@ CLEANFILES += doc_sources.lst
 #
 # BSE library
 #
-bselibexecdir			     = $(bselibdir)
+bselibexecdir			     = $(pkginstalldir)/lib
 bselibexec_LTLIBRARIES               = libbse-@MAJOR@.la
 libbse_@MAJOR@includedir             = $(pkginstalldir)/include/bse
 libbse_@MAJOR@include_HEADERS        = $(bse_public_headers) sysconfig.h bse.idl $(bse_idl_sources) $(idl_dummy_files)
