--- a/data/bse.pc.in
+++ b/data/bse.pc.in
@@ -1,24 +1,19 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 pkginstalldir=@pkginstalldir@
+includedir=${pkginstalldir}/include
 # sharedlibdir=@sharedlibdir@
-libdir=@libdir@
-includedir=@pkginstalldir@/include
-
-bselibdir=@bselibdir@
-
-demodir=@pkginstalldir@/Demos
-effectdir=@pkginstalldir@/Effects
-instrumentdir=@pkginstalldir@/Instruments
-sampledir=@pkginstalldir@/Samples
-
-scriptdir=@beastdatadir@/scripts
-plugindir=${bselibdir}/plugins
-driverdir=${bselibdir}/drivers
+libdir=${pkginstalldir}/lib
+plugindir=${pkginstalldir}/lib/plugins
+driverdir=${pkginstalldir}/lib/drivers
+demodir=${pkginstalldir}/Demos
+effectdir=${pkginstalldir}/Effects
+sampledir=${pkginstalldir}/Samples
+instrumentdir=${pkginstalldir}/Instruments
 
 Name: Beast & Bse
 Description: Beast - Music Synthesizer and Composer
 Requires: @BSE_PC_REQUIRE@ gobject-2.0 gmodule-2.0
 Version: @PACKAGE_VERSION@
-Libs: -L${bselibdir} -lbse-@MAJOR@ @BSE_PC_LIBS@
+Libs: -L${libdir} -lbse-@MAJOR@ @BSE_PC_LIBS@
 Cflags: -I${includedir} @BSE_PC_CFLAGS@
