LAUNCHERS: Makefile.am: fix setting the suid bit *after* binary installation
Install the launcher via bin_PROGRAMS, so the install-exec-hook to set the
suid bit runs after launcher installation.
Installing via beastbin_PROGRAMS causes automake to change the installation
order, so the launcher is installed via install-data *after*
install-exec-hook tries to adjust the suid bit.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/launchers/Makefile.am
+++ b/launchers/Makefile.am
@@ -8,10 +8,10 @@ AM_CXXFLAGS += $(LAUNCHER_CFLAGS) -DG_DISABLE_CONST_RETURNS
 #
 # programs to build
 #
-beastbin_PROGRAMS = beast
-beastbindir	  = $(pkginstalldir)/bin
-beast_SOURCES     = suidmain.c beaststart.c
-EXTRA_HEADERS    += suidmain.h
+bin_PROGRAMS 	= beast
+bindir	  	= $(pkginstalldir)/bin
+beast_SOURCES   = suidmain.c beaststart.c
+EXTRA_HEADERS  += suidmain.h
 
 #
 # make beast wrapper suid to allow renicing
