--- a/docs/images/Makefile.am
+++ b/docs/images/Makefile.am
@@ -6,6 +6,6 @@ SUBDIRS = # none
 SVG_FILES = beast-components.svg  beast-progs.svg  module-voices.svg
 
 # PNG_FILES = beast-components.png  beast-progs.png  module-voices.png
-# docimages_DATA = $(PNG_FILES)
-# docimagesdir = $(beastdatadir)/images
+# docimage_DATA = $(PNG_FILES)
+# docimagedir = $(pkginstalldir)/images
 # EXTRA_DIST += $(PNG_FILES)
