DATA: use $(pkginstalldir)/share to install share/ hierarchy files
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -3,11 +3,10 @@ include $(top_srcdir)/Makefile.decl
 
 SUBDIRS = images
 
-beastmandir = ${beastsharedir}/man
-man1dir     = $(beastmandir)/man1
+man1dir     = $(pkginstalldir)/share/man/man1
 man1_MANS   =
 man1_HTMLS  =
-man5dir     = $(beastmandir)/man5
+man5dir     = $(pkginstalldir)/share/man/man5
 man5_MANS   =
 man5_HTMLS  =
 
