--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -23,7 +23,7 @@ bse.pc: bse.pc.in $(top_builddir)/config.status
 CLEANFILES += bse.pc
 
 # install related pixmaps
-sharedpixmapsdir = $(beastsharedir)/pixmaps
+sharedpixmapsdir = $(pkginstalldir)/share/pixmaps
 sharedpixmaps_DATA = beast.png beast-audio-x-bse.png
 beast-audio-x-bse.png: $(srcdir)/bse-mime.png
 	cp $< $@
@@ -39,7 +39,7 @@ CLEANFILES += beast-audio-x-bse.png
 	LC_ALL=C $(INTLMERGE) -k -u $(top_srcdir)/po $< $@
 
 # generate and install .desktop file, see: https://help.gnome.org/admin/system-admin-guide/stable/mime-types-custom.html
-dotdesktopdir = $(beastsharedir)/applications
+dotdesktopdir = $(pkginstalldir)/share/applications
 dotdesktop_in_files = beast.desktop.in
 dotdesktop_DATA = $(dotdesktop_in_files:.desktop.in=.desktop)
 beast.desktop: beast.desktop.in
@@ -49,7 +49,7 @@ CLEANFILES += beast.desktop
 # simple overview: https://help.gnome.org/admin/system-admin-guide/stable/mime-types-custom.html
 # gvfs-info testfile.bse                # yields: standard::content-type: audio/x-bse
 # gvfs-mime --query audio/x-bse	        # yields: Registered applications: beast.desktop
-sharedmimedir = $(beastsharedir)/mime
+sharedmimedir = $(pkginstalldir)/share/mime
 sharedmimepackagedir = $(sharedmimedir)/packages
 sharedmimepackage_in_files = beast.xml.in
 sharedmimepackage_DATA = $(sharedmimepackage_in_files:.xml.in=.xml)
@@ -57,14 +57,14 @@ CLEANFILES += beast.xml
 beast.xml: beast.xml.in
 
 # ANCIENT: generate and install .mime and .keys files, from shared-mime-info-spec-0.11.html (2003-04-17)
-mimedir = $(beastsharedir)/mime-info
+mimedir = $(pkginstalldir)/share/mime-info
 mime_in_file = bse.keys.in bse.mime
 mime_DATA = $(mime_in_file:.keys.in=.keys)
 CLEANFILES += bse.keys
 bse.keys: bse.keys.in
 
 # ANCIENT: install .applications files, from "GNOME 2.4 Desktop System Administration Guide"
-dotapplicationsdir = $(beastsharedir)/application-registry
+dotapplicationsdir = $(pkginstalldir)/share/application-registry
 dotapplications_DATA = beast.applications
 # mime_types=...,audio/mp3,audio/x-mp3,audio/mpg3,audio/x-mpg3,audio/mpeg3,audio/x-mpeg3
 # mime_types=...,audio/mp2,audio/x-mp2,audio/mpg2,audio/x-mpg2,audio/mpeg2,audio/x-mpeg2
@@ -83,9 +83,9 @@ install-data-hook: export PS4 = $(empty) # we're using @ and set -x to hide unim
 # TODO: ../debian/copyright *should* be moved into ../docs/ and installed from there
 install-data-hook:
 	@set -x && $(INSTALL_DATA) ../debian/copyright '$(DESTDIR)$(pkginstalldir)/doc/copyright'
-	@$(call INSTALL_SYMLINK, '$(beastmandir)/man1/beast.1', '$(DESTDIR)$(mandir)/man1/beast.1')
-	@$(call INSTALL_SYMLINK, '$(beastmandir)/man1/bsewavetool.1', '$(DESTDIR)$(mandir)/man1/bsewavetool.1')
-	@$(call INSTALL_SYMLINK, '$(beastmandir)/man5/bse.5', '$(DESTDIR)$(mandir)/man5/bse.5')
+	@$(call INSTALL_SYMLINK, '$(pkginstallmandir)/man1/beast.1', '$(DESTDIR)$(mandir)/man1/beast.1')
+	@$(call INSTALL_SYMLINK, '$(pkginstallmandir)/man1/bsewavetool.1', '$(DESTDIR)$(mandir)/man1/bsewavetool.1')
+	@$(call INSTALL_SYMLINK, '$(pkginstallmandir)/man5/bse.5', '$(DESTDIR)$(mandir)/man5/bse.5')
 	@$(call INSTALL_SYMLINK, '$(sharedpixmapsdir)/beast.png', '$(DESTDIR)$(datarootdir)/pixmaps/beast.png')
 	@$(call INSTALL_SYMLINK, '$(sharedpixmapsdir)/beast-audio-x-bse.png', '$(DESTDIR)$(datarootdir)/pixmaps/beast-audio-x-bse.png')
 	@$(call INSTALL_SYMLINK, '$(dotdesktopdir)/beast.desktop', '$(DESTDIR)$(datarootdir)/applications/beast.desktop')
@@ -94,7 +94,7 @@ install-data-hook:
 	@$(call INSTALL_SYMLINK, '$(pkginstalldir)/bin/beast', '$(DESTDIR)$(bindir)/beast')
 	@set -x && test -z '$(UPDATE_DESKTOP_DATABASE)' || $(UPDATE_DESKTOP_DATABASE) '$(DESTDIR)${dotdesktopdir}';
 	@set -x && test -z '$(UPDATE_MIME_DATABASE)' || $(UPDATE_MIME_DATABASE) '$(DESTDIR)${sharedmimedir}';
-beastmandir = ${beastsharedir}/man
+pkginstallmandir = $(pkginstalldir)/share/man
 
 uninstall-local: uninstall-sharedmimepackageDATA
 	rm -f '$(DESTDIR)$(pkginstalldir)/doc/copyright'
