--- a/docs/doxygen.cfg
+++ b/docs/doxygen.cfg
@@ -45,9 +45,9 @@ ENABLE_PREPROCESSING	= YES
 MACRO_EXPANSION		= YES
 EXPAND_ONLY_PREDEF	= YES
 PREDEFINED  = DOXYGEN __SIZEOF_LONG__=8
-PREDEFINED += static_assert(x,y)= RAPICORN_STARTUP_ASSERT(x)=
-PREDEFINED += "record=struct" "sequence=struct" "RAPICORN_PIXBUF_TYPE=Pixbuf" "G_BEGIN_DECLS=" "G_END_DECLS="
-PREDEFINED += "__attribute__(x)=" RAPICORN_CONST= RAPICORN_NORETURN= RAPICORN_NOINLINE= RAPICORN_PRINTF(x,y)=
+PREDEFINED += static_assert(x,y)=
+PREDEFINED += "record=struct" "sequence=struct" "G_BEGIN_DECLS=" "G_END_DECLS="
+PREDEFINED += "__attribute__(x)="
 
 EXPAND_AS_DEFINED       =
 
